fix jump after hero

--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@
   display: none;
 }
 
-.sticky-nav {
+.sticky-nav .header {
   position: fixed;
   top: 0;
   bottom: 0;
@@ -76,6 +76,10 @@
   background-color: rgba(255,255,255, 0.95);
   z-index: 999;
   box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.06);
+}
+
+.sticky-nav .section-hero {
+  margin-top: 8.5rem;
 }
 
 /* STICKY NAVIGATION */
